--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,12 @@
     "require": {
         "php": "^8.1",
         "guzzlehttp/guzzle": "^7.2",
-        "laravel-workflow/laravel-workflow": "^0.0.32",
-        "laravel-workflow/waterline": "^0.0.12",
         "laravel/framework": "^10.8",
         "laravel/sanctum": "^3.2",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "nyholm/psr7": "^1.8",
+        "spiral/roadrunner": "v2.0",
+        "temporal/sdk": "^2.5"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
