--- a/.rr.yaml
+++ b/.rr.yaml
@@ -1,11 +1,12 @@
-version: '3'
+version: "2.7.3"
+
 rpc:
   listen: tcp://127.0.0.1:6001
 
 server:
-  command: 'php artisan temporal:work'
+  command: "php artisan temporal:work"
 
 temporal:
-  address: 'host.docker.internal:7233'
+  address: "localhost:7233"
   activities:
     num_workers: 1
