--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -20,7 +20,7 @@
         "CoenraadS.bracket-pair-colorizer"
 	],
 	"remoteUser": "sail",
-	"postCreateCommand": "chown -R 1000:1000 /var/www/html && composer install && php artisan key:generate",
+	"postCreateCommand": "chown -R 1000:1000 /var/www/html",
 	"forwardPorts": [80]
 	// "runServices": [],
 	// "shutdownAction": "none",
