Update install script

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -20,7 +20,7 @@
         "CoenraadS.bracket-pair-colorizer"
 	],
 	"remoteUser": "sail",
-	"postCreateCommand": "chown -R 1000:1000 /var/www/html && bash /var/www/html/install.sh && source ~/.bashrc",
+	"postCreateCommand": "chown -R 1000:1000 /var/www/html",
 	// "forwardPorts": [80]
 	// "runServices": [],
 	// "shutdownAction": "none",
