--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/tinker": "^2.8",
         "nyholm/psr7": "^1.8",
         "spiral/roadrunner": "v2.0",
-        "temporal/sdk": "^2.5"
+        "temporal/sdk": "^2.5",
+        "yohang/finite": "^1.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
